<resources>
    <string name="app_name" translatable="false">RoleWorld</string>
    <string name="welcome_to_roleworld">Welcome</string>
    <string name="sign_in">sign_in</string>
    <string name="sign_up">sign_up</string>
    <string name="nickname">nickname</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="done">done</string>
    <string name="user_already_exists">user already exists</string>
    <string name="passwords_not_equals">passwords not equals</string>
    <string name="user_not_found">user not found</string>
    <string name="invalid_password">invalid password</string>
    <string name="open_chat">open chats</string>
    <string name="open_profile">open profile</string>
    <string name="open_characters">open characters</string>
    <string name="open_settings">open settings</string>
    <string name="empty_hint">empty :(</string>
    <string name="you_dont_have_friends">you don`t have friends :(</string>
    <string name="you_dont_have_characters">you don`t have characters :(</string>
    <string name="cant_update_nickname">can`t update nickname</string>
    <string name="cant_update_avatar">can`t update avatar</string>
    <string name="exit_from_account">exit from account</string>
    <string name="confirm_ask">are you sure?</string>
    <string name="load">load</string>
    <string name="error">error</string>
    <string name="sex">sex</string>
    <string name="description">description</string>
    <string name="text">text</string>
    <string name="bio">biography</string>
    <string name="nothing_to_show">nothing to show :(</string>
    <string name="go_original">go original</string>
    <string name="id_already_exists">id already exists</string>
    <string name="search">search</string>
    <string name="add_to_friends">add to friends</string>
    <string name="data_layout_id_prefix" translatable="false">id: </string>
    <string name="characters">characters</string>
</resources>