<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_icon"
            android:padding="7dp"
            android:id="@+id/close_user_data"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="10dp"
        android:background="@drawable/main_layout_bg">
        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="20dp">
            <com.nakaharadev.roleworld.ui.AnimatedImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/open_profile_icon"
                android:id="@+id/user_data_avatar"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="25dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/main_text"
                android:id="@+id/user_data_nickname"
                android:singleLine="true"
                android:layout_marginBottom="15dp"
                android:paddingHorizontal="4dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_layout_id_prefix"
                    android:textColor="@color/main_text"
                    android:textSize="17sp"
                    android:paddingStart="4dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_text"
                    android:textSize="17sp"
                    android:id="@+id/user_data_id"
                    android:singleLine="true"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/add_to_friends"
            android:gravity="center"
            android:textColor="@color/main_text"
            android:textSize="17sp"
            android:background="@drawable/add_to_friends_bg"
            android:id="@+id/add_to_friends"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:text="@string/characters"
            android:textColor="@color/main_text"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:id="@+id/user_data_characters_list">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nothing_to_show"
                    android:textColor="@color/gray_text"
                    android:textSize="15sp"
                    android:id="@+id/user_data_characters_list_empty"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>