<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inAnimation="@anim/flipper_in"
        android:outAnimation="@anim/flipper_out"
        android:id="@+id/clipper_flipper">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <VideoView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/main_layout_bg"
                android:alpha="0.0"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/main_layout">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:id="@+id/main_view_layout"
                    android:layout_weight="1"
                    android:background="@drawable/main_layout_bg"
                    android:paddingTop="70dp">
                    <ViewFlipper
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/main_flipper"
                        android:inAnimation="@anim/flipper_in"
                        android:outAnimation="@anim/flipper_out">
                        <include layout="@layout/chats_layout"/>
                        <include layout="@layout/profile_layout"/>
                        <include layout="@layout/characters_layout"/>
                        <include layout="@layout/settings_layout"/>
                    </ViewFlipper>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:id="@+id/navigation_bar"
                    android:background="@drawable/navigation_bar_bg">
                   <ViewFlipper
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:id="@+id/navbar_flipper"
                       android:inAnimation="@anim/flipper_in"
                       android:outAnimation="@anim/flipper_out">
                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:orientation="horizontal">

                       </LinearLayout>
                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:gravity="center"
                           android:paddingHorizontal="20dp">
                           <com.nakaharadev.roleworld.ui.AnimatedImageView
                               android:layout_width="50dp"
                               android:layout_height="50dp"
                               android:src="@drawable/open_profile_icon"
                               android:layout_marginEnd="20dp"
                               android:id="@+id/character_avatar"/>
                           <EditText
                               android:layout_width="0dp"
                               android:layout_height="wrap_content"
                               android:layout_weight="1"
                               android:hint="имя"
                               android:textColor="@color/main_text"
                               android:textColorHint="@color/gray_text"
                               android:textSize="25sp"
                               android:singleLine="true"
                               android:imeOptions="actionDone"
                               android:background="@color/transparent"
                               android:id="@+id/input_character_nickname"/>
                       </LinearLayout>
                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:gravity="center"
                           android:paddingHorizontal="20dp">
                           <TextView
                               android:layout_width="0dp"
                               android:layout_height="35dp"
                               android:layout_weight="1"
                               android:text="@string/confirm_ask"
                               android:textColor="@color/main_text"
                               android:textSize="25sp"
                               android:layout_marginEnd="10dp"/>
                           <ImageView
                               android:layout_width="35dp"
                               android:layout_height="35dp"
                               android:src="@drawable/done_icon"
                               android:layout_marginEnd="10dp"
                               android:id="@+id/navbar_account_exit_ok"/>
                           <ImageView
                               android:layout_width="35dp"
                               android:layout_height="35dp"
                               android:src="@drawable/close_icon"
                               android:id="@+id/navbar_account_exit_close"/>
                       </LinearLayout>
                   </ViewFlipper>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:id="@+id/menu_layout"
                android:background="@drawable/menu_bg"
                android:translationX="-70dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="10dp">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingVertical="20dp"
                        android:orientation="vertical">
                        <com.nakaharadev.roleworld.ui.AnimatedImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/open_profile_icon"
                            android:padding="7dp"
                            android:contentDescription="@string/open_profile"
                            android:layout_marginBottom="20dp"
                            android:id="@+id/open_profile"/>
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/open_chat_icon"
                            android:padding="7dp"
                            android:contentDescription="@string/open_chat"
                            android:id="@+id/open_chat"
                            android:layout_marginBottom="20dp"/>
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/open_characters_icon"
                            android:padding="7dp"
                            android:contentDescription="@string/open_characters"
                            android:layout_marginBottom="20dp"
                            android:id="@+id/open_characters"/>
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/open_settings_icon"
                            android:padding="7dp"
                            android:contentDescription="@string/open_settings"
                            android:id="@+id/open_settings"/>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:id="@+id/menu_button"
                android:src="@drawable/menu_icon"/>
        </RelativeLayout>
        <include layout="@layout/clipper"/>
        <include layout="@layout/character_data"/>
    </ViewFlipper>

    <TextView
        android:id="@+id/inner_notification_view"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:text="готово"
        android:textColor="@color/always_white_text"
        android:textSize="20sp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/inner_notification_bg"
        android:translationY="-30dp"/>
</RelativeLayout>