<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_text">
    <VideoView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/character_data_bg"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/character_main_data_bg">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/back_icon"
                    android:id="@+id/close_character_data"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="20dp">
                    <com.nakaharadev.roleworld.ui.AnimatedImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/open_profile_icon"
                        android:layout_marginEnd="20dp"
                        android:id="@+id/character_data_avatar"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingVertical="25dp"
                        android:orientation="vertical">
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:textColor="@color/main_text"
                            android:layout_marginBottom="15dp"
                            android:singleLine="true"
                            android:paddingHorizontal="4dp"
                            android:background="@color/window_bg"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:clickable="false"
                            android:imeOptions="actionDone"
                            android:id="@+id/character_data_name"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="id: "
                                android:textColor="@color/main_text"
                                android:textSize="17sp"
                                android:paddingStart="4dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/gray_text"
                                android:textSize="17sp"
                                android:id="@+id/character_data_id"
                                android:singleLine="true"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/character_data_block"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex"
                        android:textColor="@color/main_text"
                        android:textSize="20sp"
                        android:layout_marginBottom="2dp"/>
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="30dp">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/character_sex_man"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginHorizontal="10dp"
                            android:id="@+id/character_sex_woman"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/character_sex_hermaphrodite"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/character_data_block"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:paddingVertical="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/main_text"
                        android:textSize="20sp"
                        android:layout_marginBottom="5dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/text"
                        android:gravity="top|start"
                        android:paddingHorizontal="10dp"
                        android:id="@+id/character_description"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/character_data_block"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:paddingVertical="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio"
                        android:textColor="@color/main_text"
                        android:textSize="20sp"
                        android:layout_marginBottom="5dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/text"
                        android:gravity="top|start"
                        android:paddingHorizontal="10dp"
                        android:id="@+id/character_bio"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>